--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.12.0",
-    "@google/genai": "^1.0.0"
+    "@google/genai": "^1.0.0",
     "@supabase/supabase-js": "^2.39.0",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
